PR18389: disable ICF on tracepoint queries

We want distinct representation of every tracepoint, even if they happen
to look identical to GCC with the same function prototype.